<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3E2E5"
    tools:context=".fragment.InfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/foto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/brand" />

        <TextView
            android:id="@+id/pembuka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/pembuka"/>

        <TextView
            android:id="@+id/menu_navigasi"
            android:layout_below="@id/pembuka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/menu_navigasi"/>

        <TextView
            android:id="@+id/menu_resto"
            android:layout_below="@id/menu_navigasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/menu_resto"/>

        <TextView
            android:id="@+id/menu_profile"
            android:layout_below="@id/menu_resto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/menu_profile"/>

        <TextView
            android:id="@+id/copyright"
            android:layout_below="@id/menu_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/copyright"/>
    </LinearLayout>


</RelativeLayout>